--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Resume | Elias T</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <nav>
+    <div class="logo">Elias T</div>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="work.html">Work</a></li>
+    </ul>
+  </nav>
+
+  <section class="hero">
+    <h1>Resume</h1>
+    <p>
+      Mechanical design, CAD modeling, and systems development.
+    </p>
+
+    <a href="assets/resume.pdf" class="btn-primary" download>
+      Download Resume
+    </a>
+  </section>
+
+</body>
+</html>
 
