--- a/resume.html
+++ b/resume.html
@@ -16,16 +16,49 @@
     </ul>
   </nav>
 
-  <section class="hero">
-    <h1>Resume</h1>
-    <p>
-      Mechanical design, CAD modeling, and systems development.
+ <section class="resume-section">
+  <div class="resume-container">
+
+    <h1>Elias Tiquiram</h1>
+    <p class="subtitle">
+      Engineering student focused on mechanical systems, CAD modeling, and applied design.
     </p>
 
-    <a href="assets/EliasTiquiram_Resume.pdf" class="btn-primary" download>
-      Download Resume
-    </a>
-  </section>
+    <div class="resume-block">
+      <h2>Education</h2>
+      <p><strong>Your University Name</strong></p>
+      <p>B.S. in Mechanical Engineering</p>
+      <p>Expected Graduation: 20XX</p>
+    </div>
+
+    <div class="resume-block">
+      <h2>Technical Skills</h2>
+      <p>SolidWorks • CAD Modeling • Assemblies • Prototyping • Fabrication • Problem Solving</p>
+    </div>
+
+    <div class="resume-block">
+      <h2>Experience</h2>
+      <p><strong>Job Title – Company Name</strong></p>
+      <p>• Designed and modeled mechanical components using SolidWorks</p>
+      <p>• Collaborated on system development and testing</p>
+      <p>• Improved design efficiency through iteration and analysis</p>
+    </div>
+
+    <div class="resume-block">
+      <h2>Projects</h2>
+      <p>• Mechanical assembly design and motion analysis</p>
+      <p>• Parametric modeling and tolerance optimization</p>
+    </div>
+
+    <div class="download-area">
+      <a href="assets/EliasTiquiram_Resume.pdf" class="btn-primary" download>
+        Download Full PDF
+      </a>
+    </div>
+
+  </div>
+</section>
+
 
 </body>
 </html>
