--- a/work/index.html
+++ b/work/index.html
@@ -1,1 +1,43 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Work | Elias Tiquiram</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+
+  <nav>
+    <div class="logo">Elias T</div>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/resume/">Resume</a></li>
+      <li><a href="/work/">Work</a></li>
+    </ul>
+  </nav>
+
+  <section class="work-placeholder">
+    <div class="work-container">
+      <h1>Selected Work</h1>
+      <p class="work-subtext">
+        Projects in development. Interactive CAD visualizations and fabrication work coming soon.
+      </p>
+
+      <div class="coming-soon-card">
+        <div class="card-line"></div>
+        <h3>Interactive 3D CAD Models</h3>
+        <p>SolidWorks assemblies and parametric systems with browser-based visualization.</p>
+      </div>
+
+      <div class="coming-soon-card">
+        <div class="card-line"></div>
+        <h3>Woodworking Projects</h3>
+        <p>Functional builds exploring precision, material, and structure.</p>
+      </div>
+
+    </div>
+  </section>
+
+</body>
+</html>
