--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title>Elias T | Portfolio</title>
+  <title>Elias Tiquiram | Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <nav>
-    <div class="logo">Elias T</div>
+    <div class="logo">Elias Tiquiram</div>
     <ul>
       <li><a href="/">Home</a></li>
 <li><a href="/resume/">Resume</a></li>
