--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </p>
 
     <div class="hero-buttons">
-      <a href="resume.html" class="btn-primary">View Resume</a>
-      <a href="work.html" class="btn-secondary">View Work</a>
+      <a href="/resume/" class="btn-primary">View Resume</a>
+      <a href="/work/" class="btn-secondary">View Work</a>
     </div>
   </section>
 
